--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+.customBlack{
+  background-color: #2e2e2e;
+}
+
 .background-c {
   position: relative;
 }
@@ -102,4 +106,43 @@ nav {
   0% { transform: translateY(0); }
   50% { transform: translateY(-5px); }
   100% { transform: translateY(0); }
+}
+
+/** Projects
+**/
+.customBlack .overlay {
+  position: relative;
+  display: inline-block;
+}
+
+.customBlack .overlay:hover .text-overlay {
+  opacity: 1;
+}
+
+.customBlack .overlay:hover img {
+  filter: brightness(50%);
+}
+
+.customBlack .text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.customBlack .text-overlay .button-overlay {
+  margin-top: 20px;
+}
+
+.customBlack .text-overlay .button-overlay button {
+  color: #fff;
 }
